# Chopper-Game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  package-lock.json  package.json
assets/: config.json
lib/: config.h
src/: Config.h  Game.cpp  Game.h  SDL_Instances.h  _constants.h  _consts.h  _sdl_instances.h  _stucts.h  _utils.h  consts.h  main.cpp  types.h
src/components/Decoration/: Decoration.cpp  Decoration.h
src/components/KeyboardControl/: KeyboardControl.cpp  KeyboardControl.h
src/components/Map/: Map.cpp  Map.h
src/components/Player/: Player.cpp  Player.h
src/components/PositionState/: PositionState.cpp  PositionState.h
src/components/Sprite/: Sprite.cpp  Sprite.h
src/components/TextureManager/: TextureManager.cpp  TextureManager.h
src/components/Tile/: Tile.cpp  Tile.h
src/controllers/Game/: Game.cpp  Game.h
src/controllers/Renderer/: Renderer.cpp  Renderer.h
src/gameEntities/Camera/: Camera.cpp  Camera.h
src/gameEntities/Decoration/: Decoration.cpp  Decoration.h
src/gameEntities/Map/: Map.cpp  Map.h
src/gameEntities/Player/: Player.cpp  Player.h
